ecs test : dockerfile ..2